[package]
name = "litec"
version = "0.1.0"
edition = "2024"

[dependencies]
litec_parse = { path = "compiler/litec_parse" }
litec_ast = { path = "compiler/litec_ast" }
litec_span = { path = "compiler/litec_span" }

[workspace]
members = [ 
    "compiler/litec_ast",
    "compiler/litec_parse",
    "compiler/litec_span"
]
